# kanbu

./: .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TASKS.md  WORKFLOW.md  _config.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  settings.local.json  start.sh  tsconfig.json
.github/: FUNDING.yml
apps/api/: .env  (+4 more)
apps/graphiti/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/graphiti/src/: __init__.py
apps/graphiti/src/api/: __init__.py  main.py  schemas.py
apps/graphiti/src/entity_types/: __init__.py  kanbu_entities.py
docker/: .env.example  Dockerfile.api  Dockerfile.web  api-entrypoint.sh  docker-compose.full.yml  docker-compose.openclaw.yml  docker-compose.selfhosted.yml  docker-compose.yml  nginx.conf
docs/: AD-STYLE-ROLE-ASSIGNMENTS-PLAN.md  DEV-ENVIRONMENT.md  GITHUB-INTEGRATION.md  OPENCLAW-SKILL.md  OPENCLAW.md  PERMISSION-SYSTEM-PLAN.md  STATUS-ANALYSE.md
memory/: claude-code-prompt-openclaw-bridge.md  claude-code-workflow.md  cowork-briefing.md  kanbu-openclaw-masterplan.md
scripts/: README.md  api.sh  create-falkordb-indexes.ts  detect-duplicates.ts  migrate-bm25-indexes.sql  migrate-community-detection.ts  migrate-edge-embeddings.ts  migrate-groupid-fix.ts  migrate-node-embeddings.ts  migrate-temporal-edges.ts  perf-test-edge-embeddings.ts  rollback-temporal-edges.ts  test-bm25-search.ts  test-contradiction-detection.ts  test-date-extraction.ts  test-edge-embeddings.ts  test-hybrid-search.ts  test-node-embeddings.ts  test-temporal-queries.ts
(+684 files in other folders)
