[project]
name = "kanbu-graphiti"
description = "Kanbu Wiki Knowledge Graph Service - Based on Graphiti"
version = "1.0.0"
authors = [
    { name = "Robin Waslander", email = "R.Waslander@gmail.com" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<4"

dependencies = [
    # FastAPI for HTTP service
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",

    # Graphiti core dependencies
    "pydantic>=2.11.5",
    "diskcache>=5.6.3",
    "tenacity>=9.0.0",
    "numpy>=1.0.0",
    "python-dotenv>=1.0.1",

    # FalkorDB (our graph database)
    "falkordb>=1.1.2,<2.0.0",

    # LLM providers
    "openai>=1.91.0",
    "anthropic>=0.49.0",

    # Embeddings
    "voyageai>=0.2.3",

    # Telemetry (disabled by default)
    "posthog>=3.0.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
sentence-transformers = ["sentence-transformers>=3.2.1"]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.1",
    "pyright>=1.1.404",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
